--- a/src/mymfem/CMakeLists.txt
+++ b/src/mymfem/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(MyMfem
   PRIVATE ${CMAKE_CURRENT_LIST_DIR}/mybilinearform.cpp
   PRIVATE ${CMAKE_CURRENT_LIST_DIR}/base_observer.cpp
+  PRIVATE ${CMAKE_CURRENT_LIST_DIR}/mesh_hierarchy.cpp
   PRIVATE ${CMAKE_CURRENT_LIST_DIR}/utilities.cpp
 )
