--- a/src/sparse_heat/CMakeLists.txt
+++ b/src/sparse_heat/CMakeLists.txt
@@ -1,3 +1,4 @@
 target_sources(SparseHeatObj
-  PRIVATE ${CMAKE_CURRENT_LIST_DIR}/assembly.cpp
+  PRIVATE ${CMAKE_CURRENT_LIST_DIR}/spatial_assembly.cpp
+  PRIVATE ${CMAKE_CURRENT_LIST_DIR}/temporal_assembly.cpp
 )
