Add rhs computation in discretisation, init add observer

--- a/src/sparse_heat/CMakeLists.txt
+++ b/src/sparse_heat/CMakeLists.txt
@@ -4,5 +4,6 @@ target_sources(SparseHeatObj
   PRIVATE ${CMAKE_CURRENT_LIST_DIR}/solution_handler.cpp
   PRIVATE ${CMAKE_CURRENT_LIST_DIR}/discretisation.cpp
   PRIVATE ${CMAKE_CURRENT_LIST_DIR}/discretisation_H1Hdiv.cpp
+  PRIVATE ${CMAKE_CURRENT_LIST_DIR}/observer.cpp
   PRIVATE ${CMAKE_CURRENT_LIST_DIR}/utilities.cpp
 )
