Refactor full-tensor hear solver

--- a/src/heat/CMakeLists.txt
+++ b/src/heat/CMakeLists.txt
@@ -7,6 +7,7 @@ target_sources(LibHeat
   PRIVATE ${CMAKE_CURRENT_LIST_DIR}/discretisation.cpp
   PRIVATE ${CMAKE_CURRENT_LIST_DIR}/discretisation_H1H1.cpp
   PRIVATE ${CMAKE_CURRENT_LIST_DIR}/discretisation_H1Hdiv.cpp
+  PRIVATE ${CMAKE_CURRENT_LIST_DIR}/solution_handler.cpp
   PRIVATE ${CMAKE_CURRENT_LIST_DIR}/observer.cpp
   PRIVATE ${CMAKE_CURRENT_LIST_DIR}/solver.cpp
   PRIVATE ${CMAKE_CURRENT_LIST_DIR}/functionals.cpp
